syntax = "proto3";

package service;
option go_package="./pb";

service User {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc GetUserInfoByID(UserInfoRequest) returns (UserInfoResponse);
  rpc GetUserConfigByID(UserConfigRequest) returns (UserConfigResponse);
    rpc GetFriendsInfoByID(FriendsInfoRequest) returns (FriendsInfoResponse);
//  rpc UpdateUserConfigByID(UserConfigUpdateRequest) returns (UserConfigUpdateResponse);
//  rpc SendSms(SendSmsRequest) returns (SendSmsResponse);
}

message FriendsInfoRequest {
    int64 userId = 1;
    int64 friendId = 2;
    int32 role = 3;
}

message FriendsInfoResponse {
  int64 userId = 1;
  string nickname = 2;
  string Abstract = 3;
  string avatar = 4;
  int32 Gender = 5;
  string addr = 6;
  string Notice = 7;
}

//message UserConfigUpdateRequest {
//  int64 user_id = 1;
//  string recall_message = 2;
//  string avatar = 3;
//  int32 gender = 4;
//  string addr = 5;
//  string abstract = 6;
//  bool friends_online = 7;
//  bool all_sounds = 8;
//  bool secure_link = 9;
//  bool save_pwd = 10;
//  int32 search_user = 11;
//  int32 verification_type = 12;
//  VerificationQuestion verification_question = 13;
//}

//message UserConfigUpdateResponse {
//  string message = 1;
//}

message UserConfigRequest{
  int64 userId = 1;
}

message VerificationQuestion {
  string question1 =1;
  string question2 =2;
  string question3 =3;
  string answer1 =4;
  string answer2 =5;
  string answer3 =6;
}
message UserConfigResponse {
  int64 id = 12;
  int64 user_id = 1;
  string recall_message = 2;
  bool friends_online = 4;
  bool all_sounds = 5;
  bool secure_link = 6;
  bool save_pwd = 7;
  int32 search_user = 8;
  int32 verification_type = 9;
  VerificationQuestion verification_question = 10;
}

message LoginRequest{
  string mobile = 1;
  string password = 3;
}

message LoginResponse{
  int64 userId = 1;
  string nickname = 2;
  int32 role = 5;
}

message RegisterRequest {
  string mobile = 1;
  string password = 2;
  string nickname = 3;
  string avatar = 4;
  int32 role = 5;
  string code = 6;
}

message RegisterResponse {
  int64 userId = 1;
  string message = 3;
}
message LogoutRequest {
  int64 userId = 1;
}

message LogoutResponse {
  string message = 1;
}


//message SendSmsRequest {
//  int64 userId = 1;
//  string mobile = 2;
//}
//
//message SendSmsResponse {
//  string message = 1;
//}


message UserInfoRequest {
  int64 userId = 1;
}

message UserInfoResponse {
  int64 userId = 1;
  string nickname = 2;
  string mobile = 3;
  string avatar = 4;
  string gender = 8;
  string abstract = 9;
  string addr = 10;
}

